--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <!-- Контентное изображение в формате webp -->
                 <div class="article-img">
                     <picture>
-                    <source srcset="img\figma-img1.webp" type="image/webp">
+                    <source srcset="img/figma-img1.webp" type="image/webp">
                     <img src="img/figma-img.png" alt="keyborad &s sunglass picture">
                 </picture>
                 </div>
