--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <p class="text3">
                     Enim, vel massa odio diam. Blandit massa gravida feugiat elementum id nec sed leo. Nisi in ornare lectus eget. Urna, risus, consectetur volutpat lorem purus. Velit aliquet nibh vitae maecenas. Consectetur neque ut aliquam eros, purus enim dignissim aenean vitae. Ultrices fames augue mattis tortor est justo, pharetra nibh risus. Facilisi at porttitor volutpat natoque proin amet, nulla. Vivamus ut lobortis sagittis curabitur tellus convallis eget netus vitae
                 </p>
-                <div class="share share-bottom">
+                <div class="share">
                     <span>Share:</span>
                     <div class="social-block">
                         <a href="https://www.facebook.com/" class="share-link" target="_blank">
